--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,10 +1,6 @@
 # specify main menu items here
 
-- text: Home
-  url: /
-- text: About
-  url: /about
-- text: Contact
-  url: /contact
 - text: Blog
   url: /blog
+- text: Authors
+  url: /authors  
