--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,8 @@
 # specify main menu items here
 
+- text: Home
+   url: /
 - text: Blog
-  url: /index
+  url: /blog
 - text: Authors
   url: /authors  
